--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,41 @@
+#heading{
+    padding-top: 7%;
+    text-align: center;
+    font-size: larger;
+    margin-left: 15%;
+    margin-right: 15%;
+}
+#detail{
+    font-family: 'Franklin Gothic Medium';
+    text-align: center;
+    font-size: 20px;
+}
 body{
-    background: linear-gradient(to right,#ffcbcb, #ffb5b5);
-    
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(to top,#ffcbcb, #ffb5b5);    
 }
 .main{
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    background-color: black;
-
+    justify-content: space-around; 
+}
+.container{
+    padding-top: 7%;
+    width: 30%;
 }
 .item{
     font-family: 'Franklin Gothic Medium';
     background-color:#407088;
-    height: 50%;
-    
+    color:#ffcbcb;
+    font-size: 30px;
+    text-align: center;    
 }
-h3{
-    background-color: blue;
+.value{
+    font-family: 'Franklin Gothic Medium';
+    background-color: #ffb5b5;
+    color: #132743;
+    font-size: 30px;
+    text-align: center;
 }
